fix hien thi dung lop cho teacher, ko xo ra toan bo class/fix bam quay lai tren Classdetailwindow sau do xem chi tiet lop ko bi loi ko tim thay id